Meme download functionality added

--- a/src/components/Meme/styles.module.scss
+++ b/src/components/Meme/styles.module.scss
@@ -50,7 +50,9 @@
 
       .meme-img-wrap {
         position: relative;
-        margin-bottom: 20px;
+        //margin-bottom: 20px;
+        //padding-bottom: 20px;
+
         img {
           object-fit: contain;
           object-position: top left;
