--- a/src/components/Meme/styles.module.scss
+++ b/src/components/Meme/styles.module.scss
@@ -160,6 +160,14 @@
           display: none;
         }
       }
+
+      .meme-random {
+        .meme-btn {
+          // download not possible for mobile
+          // that's why don't display it
+          display: none;
+        }
+      }
     }
   }
 }
@@ -180,9 +188,5 @@
   @media (max-width: 1200px) {
     width: 100%;
     font-size: 16px;
-  }
-
-  @media (max-width: 576px) {
-    display: none;
   }
 }
